# DnCNN2

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  README_.md  TODO_paper.md  acoustic_validation.py  data_deepsets.py  data_utils.py  index.html  inference.py  instruction.md  instruction_deepCAE.md  instruction_deepsets.md  mkdocs.yml  model.py  model_deepsets.py  preview_signals.py  pyproject.toml  set_architecture_migration_plan.md  sitemap.xml  train.py  train_pinn.py  transformer.py  visualization.m
.agents/rules/: 00_meta_behavior.md  01_cnn_architecture_rules.md  02_python_code_standards.md  03_debugging_protocol.md  04_documentation_standards.md  99_git_automation.md
.antigravity/: comtext.taml  rules.md
.claude/commands/: handsoff.md
.claude/skills/: neural-training-loop
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
archive/: data_alignment_encoding.md  deepsets_set_transformer_explainer.md  implementation_plan.md
configs/: README.md  pipeline_deepsets_template.json  pipeline_pinn_template.json  pipeline_tf_fusion.json  pipeline_tf_fusion_template.json
data/: __init__.py  data_deepsets.py  data_utils.py  tf_features.py
docs/: index.md
experiments/: exp_template.md
model/: __init__.py  model.py  model_deepsets.py  model_networks_overview.md
results/: mkdocs.yml
results/docs/: index.md
scripts/: _shared.py  git_auto.py  run_unified_pipeline.py  transformer.py
search/: search_index.json
stylesheets/: extra.css
(+33 files in other folders)
